--- a/1_pytorch_fundamentals.ipynb
+++ b/1_pytorch_fundamentals.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMN2ReUuzDykaFz8uW9C80J",
+      "authorship_tag": "ABX9TyM50BWT5XHavA4Z2L1Na2KD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -255,7 +255,9 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "testing = \"trying something\""
+      ],
       "metadata": {
         "id": "A4SJuFs51HZi"
       },
