Introduction to Tensors

--- a/1_pytorch_fundamentals.ipynb
+++ b/1_pytorch_fundamentals.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM50BWT5XHavA4Z2L1Na2KD",
+      "authorship_tag": "ABX9TyORRStyOsAD+dpjrrdf3Tpa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,39 +28,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "RfnQAT8woFkH",
-        "outputId": "527daf54-76ba-4bb6-8fe3-ce20ccf5a1a7"
+        "outputId": "b17842b8-159d-4af5-d37a-b55585c239d4"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Tue Aug 27 16:32:08 2024       \n",
-            "+---------------------------------------------------------------------------------------+\n",
-            "| NVIDIA-SMI 535.104.05             Driver Version: 535.104.05   CUDA Version: 12.2     |\n",
-            "|-----------------------------------------+----------------------+----------------------+\n",
-            "| GPU  Name                 Persistence-M | Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
-            "| Fan  Temp   Perf          Pwr:Usage/Cap |         Memory-Usage | GPU-Util  Compute M. |\n",
-            "|                                         |                      |               MIG M. |\n",
-            "|=========================================+======================+======================|\n",
-            "|   0  Tesla T4                       Off | 00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   45C    P8               9W /  70W |      0MiB / 15360MiB |      0%      Default |\n",
-            "|                                         |                      |                  N/A |\n",
-            "+-----------------------------------------+----------------------+----------------------+\n",
-            "                                                                                         \n",
-            "+---------------------------------------------------------------------------------------+\n",
-            "| Processes:                                                                            |\n",
-            "|  GPU   GI   CI        PID   Type   Process name                            GPU Memory |\n",
-            "|        ID   ID                                                             Usage      |\n",
-            "|=======================================================================================|\n",
-            "|  No running processes found                                                           |\n",
-            "+---------------------------------------------------------------------------------------+\n"
+            "/bin/bash: line 1: nvidia-smi: command not found\n"
           ]
         }
       ],
@@ -82,9 +63,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qj6HbhwJrIwG",
-        "outputId": "12bacc7e-ab4e-405f-8cde-0cf25c1f0cae"
+        "outputId": "3ae0a318-67af-4669-8eac-5e682e7fe8a1"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -106,9 +87,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "D08HXsJ9swaQ",
-        "outputId": "72002393-9a32-48cc-a135-4a1012f44743"
+        "outputId": "d6c746d7-2471-4cec-dfd8-4f62b918679e"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -118,7 +99,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 4
         }
       ]
     },
@@ -132,9 +113,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-ZEHQdwF0Y-0",
-        "outputId": "0526c8c8-4e23-4928-ea37-4e4ebcdd331e"
+        "outputId": "f8cf5278-da9b-4461-b7ef-171fad107b55"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -144,7 +125,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 5
         }
       ]
     },
@@ -158,9 +139,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "w-1RKTfO0r6c",
-        "outputId": "cf0bfa97-575c-4fc5-ee06-bd20ec4ed3f3"
+        "outputId": "afc93e4d-2778-4c6f-ed12-4387e1df9692"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -170,7 +151,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 6
         }
       ]
     },
@@ -185,9 +166,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ucskW1Lx0zPA",
-        "outputId": "d2c7b530-ba70-4dc0-90f7-30898602d656"
+        "outputId": "160b1801-e163-4530-cd8b-85f5688b2ec9"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -197,7 +178,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 7
         }
       ]
     },
@@ -211,9 +192,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EzycogGT1Ac2",
-        "outputId": "c14fc602-faaf-463a-e22b-9e052d41e816"
+        "outputId": "04f3270a-d09c-4a90-82eb-3d389310ef76"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -223,7 +204,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 8
         }
       ]
     },
@@ -237,9 +218,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "c760s3W21EDE",
-        "outputId": "006a9c13-32c9-4beb-d0ab-5786cf8fc9b5"
+        "outputId": "60e61203-005f-460c-add8-40776f689045"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -249,17 +230,230 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 9
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "testing = \"trying something\""
+        "MATRIX = torch.tensor([[7,8],[9,10]])\n",
+        "MATRIX"
       ],
       "metadata": {
-        "id": "A4SJuFs51HZi"
+        "id": "A4SJuFs51HZi",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d39bbc00-5ec8-4d14-dae9-306f4ca87fa4"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[ 7,  8],\n",
+              "        [ 9, 10]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "MATRIX.ndim"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "V8K2PNcSQCwV",
+        "outputId": "0c3023b5-d35a-4316-bce2-46ebdeecde8d"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "MATRIX[1]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZBJIYlUfQOd2",
+        "outputId": "df3ec707-27ca-4161-8318-d3e187fc6bda"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([ 9, 10])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "MATRIX.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lumEI37XQVH4",
+        "outputId": "d892acf8-6b17-4252-9074-538356356f24"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([2, 2])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "TENSOR = torch.tensor([[[1,2,3],[3,6,9],[2,4,5]]])\n",
+        "TENSOR"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lkIE0Z5AQYOV",
+        "outputId": "a9f2c5b8-699d-47cd-a92a-1411f03f261c"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[1, 2, 3],\n",
+              "         [3, 6, 9],\n",
+              "         [2, 4, 5]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "TENSOR.ndim"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "j3Q9uN6HQulA",
+        "outputId": "9a4f7581-74c3-436c-9548-0ce4d8651ec6"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "TENSOR.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xYpgf3xmQ4Kj",
+        "outputId": "0699ce39-4ac4-4de8-ee2b-29ec27d3e224"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([1, 3, 3])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "TENSOR[0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CwG0dMqKQ6od",
+        "outputId": "84a1c4c9-7287-43b4-b886-afe0bc1065a7"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1, 2, 3],\n",
+              "        [3, 6, 9],\n",
+              "        [2, 4, 5]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "W9rkLJ-tRwyr"
       },
       "execution_count": null,
       "outputs": []
