--- a/1_pytorch_fundamentals.ipynb
+++ b/1_pytorch_fundamentals.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyORRStyOsAD+dpjrrdf3Tpa",
+      "authorship_tag": "ABX9TyPVVNx99hrfoOVUb01bqGKG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "RfnQAT8woFkH",
-        "outputId": "b17842b8-159d-4af5-d37a-b55585c239d4"
+        "outputId": "1d688dbf-e506-43f9-b18a-bbda85e336a1"
       },
       "outputs": [
         {
@@ -63,9 +63,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qj6HbhwJrIwG",
-        "outputId": "3ae0a318-67af-4669-8eac-5e682e7fe8a1"
+        "outputId": "f98d1093-da36-4e46-9e42-677c95985580"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -87,9 +87,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "D08HXsJ9swaQ",
-        "outputId": "d6c746d7-2471-4cec-dfd8-4f62b918679e"
+        "outputId": "d2db6afa-3520-43dc-b019-c431eb93605c"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -99,7 +99,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 3
         }
       ]
     },
@@ -113,9 +113,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-ZEHQdwF0Y-0",
-        "outputId": "f8cf5278-da9b-4461-b7ef-171fad107b55"
+        "outputId": "0415fbdd-63c6-4908-b3d3-7b6b1d097f84"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -125,7 +125,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 4
         }
       ]
     },
@@ -139,9 +139,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "w-1RKTfO0r6c",
-        "outputId": "afc93e4d-2778-4c6f-ed12-4387e1df9692"
+        "outputId": "af8ff692-66c0-4edc-90b6-a8e8cc1651ed"
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -151,7 +151,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 5
         }
       ]
     },
@@ -166,9 +166,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ucskW1Lx0zPA",
-        "outputId": "160b1801-e163-4530-cd8b-85f5688b2ec9"
+        "outputId": "9f98d6de-53fb-4526-d7f8-99bbcd1945dd"
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -178,7 +178,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 6
         }
       ]
     },
@@ -192,9 +192,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EzycogGT1Ac2",
-        "outputId": "04f3270a-d09c-4a90-82eb-3d389310ef76"
+        "outputId": "8d7fa93d-0411-4a86-af24-b63160d577f8"
       },
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -204,7 +204,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 7
         }
       ]
     },
@@ -218,9 +218,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "c760s3W21EDE",
-        "outputId": "60e61203-005f-460c-add8-40776f689045"
+        "outputId": "82841719-5475-4ca4-8379-c76854008ecc"
       },
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -230,7 +230,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 8
         }
       ]
     },
@@ -245,9 +245,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d39bbc00-5ec8-4d14-dae9-306f4ca87fa4"
+        "outputId": "aca061f3-8fa0-4031-f73f-e8f26762216b"
       },
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -258,7 +258,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 9
         }
       ]
     },
@@ -272,9 +272,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "V8K2PNcSQCwV",
-        "outputId": "0c3023b5-d35a-4316-bce2-46ebdeecde8d"
+        "outputId": "97e74aa9-00a0-4f22-d040-63916d85dac7"
       },
-      "execution_count": 12,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -284,7 +284,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 10
         }
       ]
     },
@@ -298,9 +298,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZBJIYlUfQOd2",
-        "outputId": "df3ec707-27ca-4161-8318-d3e187fc6bda"
+        "outputId": "c37de9de-9032-4129-b8fc-adc55735b3a4"
       },
-      "execution_count": 14,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -310,7 +310,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 11
         }
       ]
     },
@@ -324,9 +324,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lumEI37XQVH4",
-        "outputId": "d892acf8-6b17-4252-9074-538356356f24"
+        "outputId": "25393f2d-cb79-4086-d192-a16e92575a44"
       },
-      "execution_count": 15,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -336,7 +336,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 12
         }
       ]
     },
@@ -351,9 +351,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lkIE0Z5AQYOV",
-        "outputId": "a9f2c5b8-699d-47cd-a92a-1411f03f261c"
+        "outputId": "659ac093-0e9e-45b1-da91-4b7239ee9ede"
       },
-      "execution_count": 16,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -365,7 +365,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 13
         }
       ]
     },
@@ -379,9 +379,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "j3Q9uN6HQulA",
-        "outputId": "9a4f7581-74c3-436c-9548-0ce4d8651ec6"
+        "outputId": "9edd0e59-8ccb-42cf-8e4a-365f26886c5f"
       },
-      "execution_count": 17,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -391,7 +391,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 14
         }
       ]
     },
@@ -405,9 +405,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xYpgf3xmQ4Kj",
-        "outputId": "0699ce39-4ac4-4de8-ee2b-29ec27d3e224"
+        "outputId": "89271a87-510d-46ef-dd0b-3dbfcf767844"
       },
-      "execution_count": 18,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -417,7 +417,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 15
         }
       ]
     },
@@ -431,9 +431,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CwG0dMqKQ6od",
-        "outputId": "84a1c4c9-7287-43b4-b886-afe0bc1065a7"
+        "outputId": "647821ea-38f7-42d2-92c4-e06b7cf225ae"
       },
-      "execution_count": 21,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -445,7 +445,311 @@
             ]
           },
           "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "TENSOR2 = torch.tensor(([[[1,2,3],[3,6,9],[2,4,5]]],[[[1,2,3],[3,6,9],[2,4,5]]],[[[1,2,3],[3,6,9],[2,4,5]]],[[[1,2,3],[3,6,9],[2,4,5]]],[[[1,2,3],[3,6,9],[2,4,5]]]))\n",
+        "TENSOR2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "W9rkLJ-tRwyr",
+        "outputId": "8762372a-b914-49fd-fb7e-44e8ccb180e3"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[[1, 2, 3],\n",
+              "          [3, 6, 9],\n",
+              "          [2, 4, 5]]],\n",
+              "\n",
+              "\n",
+              "        [[[1, 2, 3],\n",
+              "          [3, 6, 9],\n",
+              "          [2, 4, 5]]],\n",
+              "\n",
+              "\n",
+              "        [[[1, 2, 3],\n",
+              "          [3, 6, 9],\n",
+              "          [2, 4, 5]]],\n",
+              "\n",
+              "\n",
+              "        [[[1, 2, 3],\n",
+              "          [3, 6, 9],\n",
+              "          [2, 4, 5]]],\n",
+              "\n",
+              "\n",
+              "        [[[1, 2, 3],\n",
+              "          [3, 6, 9],\n",
+              "          [2, 4, 5]]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "TENSOR2.shape\n",
+        "# No idea why it is (5, 1, 3, 3) and not (1, 5, 3, 3)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MrfIsirQbRJW",
+        "outputId": "932f78ef-8cd2-4f95-b847-54a154641828"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([5, 1, 3, 3])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "TENSOR2.ndim"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BQPCPaNVbvJJ",
+        "outputId": "268c13ac-cc5d-43ef-e990-9ff57c380115"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4"
+            ]
+          },
+          "metadata": {},
           "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "TENSOR3 = torch.tensor([[[1, 2, 3], [3, 6, 9], [2, 4, 5]],\n",
+        "                        [[1, 2, 3], [3, 6, 9], [2, 4, 5]],\n",
+        "                        [[1, 2, 3], [3, 6, 9], [2, 4, 5]],\n",
+        "                        [[1, 2, 3], [3, 6, 9], [2, 4, 5]],\n",
+        "                        [[1, 2, 3], [3, 6, 9], [2, 4, 5]]])\n",
+        "\n",
+        "TENSOR3 = TENSOR3.unsqueeze(0)  # Add a batch dimension\n",
+        "TENSOR3"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FqZ6bhP5bxXF",
+        "outputId": "713b43ff-17ab-4b1e-f3ce-25f770b180f8"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[[1, 2, 3],\n",
+              "          [3, 6, 9],\n",
+              "          [2, 4, 5]],\n",
+              "\n",
+              "         [[1, 2, 3],\n",
+              "          [3, 6, 9],\n",
+              "          [2, 4, 5]],\n",
+              "\n",
+              "         [[1, 2, 3],\n",
+              "          [3, 6, 9],\n",
+              "          [2, 4, 5]],\n",
+              "\n",
+              "         [[1, 2, 3],\n",
+              "          [3, 6, 9],\n",
+              "          [2, 4, 5]],\n",
+              "\n",
+              "         [[1, 2, 3],\n",
+              "          [3, 6, 9],\n",
+              "          [2, 4, 5]]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "TENSOR3.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "F09XGyuqcxO5",
+        "outputId": "cf370c8b-5f1b-42e8-ef5c-e78a46ab56fc"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([1, 5, 3, 3])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "TENSOR3.ndim"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RYmEFlj3c_sQ",
+        "outputId": "285cbfcf-1c17-4e8a-ae63-34171fbf5cb2"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Random Tensors\n",
+        "\n",
+        "Why random tensors?\n",
+        "\n",
+        "Random tensors are important because the way many neural networks learn is that they start with tensors full of random numbers and then adjust those random numbers to better represent the data.\n",
+        "\n",
+        "`Start with random numbers -> look at data -> update random numbers -> look at data -> update random numbers`\n",
+        "\n",
+        "Torch random tensors - https://pytorch.org/docs/stable/generated/torch.rand.html"
+      ],
+      "metadata": {
+        "id": "YI8ZajvAdBTJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "random_tensor = torch.rand(3,4)\n",
+        "random_tensor"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KG2xxkmGeGW7",
+        "outputId": "1de90bba-33bd-41a3-9d16-8d105e110e2c"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.6068, 0.8801, 0.2727, 0.4537],\n",
+              "        [0.8690, 0.5453, 0.1539, 0.6497],\n",
+              "        [0.6412, 0.4742, 0.4479, 0.7695]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "random_tensor.ndim"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Gr6I3OINe8Mj",
+        "outputId": "e31aa9a1-9032-401b-c871-99b9bd196cf0"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "random_image_size_tensor = torch.rand(size=(3,224,224)) # colour channels (R, G, B), height, width\n",
+        "random_image_size_tensor.shape, random_image_size_tensor.ndim"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bsMdY8qliJx7",
+        "outputId": "604b7225-f731-41fa-bb3e-39294d168fd6"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(torch.Size([224, 224, 3]), 3)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
         }
       ]
     },
@@ -453,7 +757,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "W9rkLJ-tRwyr"
+        "id": "-TQ3Gu3GiKdy"
       },
       "execution_count": null,
       "outputs": []
