using arange and tensor-like

--- a/1_pytorch_fundamentals.ipynb
+++ b/1_pytorch_fundamentals.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPVVNx99hrfoOVUb01bqGKG",
+      "authorship_tag": "ABX9TyMBJLekJmNci5LKLsPKSKZV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -754,10 +754,224 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Zeroes and ones"
+      ],
+      "metadata": {
+        "id": "-TQ3Gu3GiKdy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "zeroes = torch.zeros(size=(3,4))\n",
+        "zeroes"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Uta15D9kl7K_",
+        "outputId": "f86c19d1-94a1-4c3a-8ef7-984f2dc0f3bb"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0., 0., 0., 0.],\n",
+              "        [0., 0., 0., 0.],\n",
+              "        [0., 0., 0., 0.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "zeroes*random_tensor"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cJdM8IjnmDb_",
+        "outputId": "95bfd9bf-d6da-4423-e1cb-4862725be175"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0., 0., 0., 0.],\n",
+              "        [0., 0., 0., 0.],\n",
+              "        [0., 0., 0., 0.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ones = torch.ones(size=(3,4))\n",
+        "ones"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hUpqeTTomG28",
+        "outputId": "0ced2238-0d58-476c-b0aa-6bfd7f8cf1b3"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1., 1., 1., 1.],\n",
+              "        [1., 1., 1., 1.],\n",
+              "        [1., 1., 1., 1.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ones.dtype"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CsKks0memOcW",
+        "outputId": "216945ac-7cf8-4f76-c15a-c47261a74be1"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.float32"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Creating a range of tensors and tensors-like"
+      ],
+      "metadata": {
+        "id": "qIkHiyBomP97"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "one_to_ten = torch.arange(start=1,end=11,step=1)\n",
+        "one_to_ten"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qSJIQKFfnHfz",
+        "outputId": "f145ee7c-f294-477e-b057-16e941119471"
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 40
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.__version__"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "QZfrJdTqm4ko",
+        "outputId": "11360465-ab4b-4b28-bc93-0e429b7206a5"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'2.4.0+cu121'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 41
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ten_zeroes = torch.zeros_like(input=one_to_ten)\n",
+        "ten_zeroes"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yCPXpIh4nrAP",
+        "outputId": "54bfb8db-537a-4e3a-88dc-429453cee9b0"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([0, 0, 0, 0, 0, 0, 0, 0, 0, 0])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "-TQ3Gu3GiKdy"
+        "id": "5Q2Uk8ban2Iz"
       },
       "execution_count": null,
       "outputs": []
