--- a/1_pytorch_fundamentals.ipynb
+++ b/1_pytorch_fundamentals.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP3qoHDmpm8C8vswEOir/bz",
+      "authorship_tag": "ABX9TyM86ZA7QsohJVltSSj6YvJ8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1404,9 +1404,108 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "float_16_tensor * complex_32_tensor # for complex, complex64 is default so thats why it didnt mention dtype before"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9xXn8UTUDmIk",
+        "outputId": "2a071991-7279-442d-f629-a42eb94b041c"
+      },
+      "execution_count": 91,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([ 9.+0.j, 36.+0.j, 81.+0.j], dtype=torch.complex32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 91
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Getting information from tensors (tensor attributes)\n",
+        "\n",
+        "1. Tensors not right datatype - to do get datatype from a tensor, can use `tensor.dtype`\n",
+        "2. Tensors not right shape - to get shape from a tensor, can use `tensor.shape`\n",
+        "3. Tensors not on the right device - to get device from a tensor, can use `tensor.device`"
+      ],
+      "metadata": {
+        "id": "vvRjzTzaG3f6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "some_tensor = torch.rand(3,4)\n",
+        "some_tensor"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Z7WxSQ2MHHmb",
+        "outputId": "be98379f-4ac0-4b7f-bbb9-eb7213874254"
+      },
+      "execution_count": 93,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.6841, 0.8485, 0.4469, 0.3348],\n",
+              "        [0.6144, 0.4845, 0.7647, 0.0036],\n",
+              "        [0.3486, 0.8301, 0.9028, 0.7652]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 93
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(some_tensor)\n",
+        "print(f\"Datatype of tensor: {some_tensor.dtype}\")\n",
+        "print(f\"Shape of tensor: {some_tensor.shape}\")\n",
+        "print(f\"Device tensor is on: {some_tensor.device}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3yXLyC76HaRE",
+        "outputId": "d87c0283-3cd6-4bd0-ab86-a8b4810584cf"
+      },
+      "execution_count": 95,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[0.6841, 0.8485, 0.4469, 0.3348],\n",
+            "        [0.6144, 0.4845, 0.7647, 0.0036],\n",
+            "        [0.3486, 0.8301, 0.9028, 0.7652]])\n",
+            "Datatype of tensor: torch.float32\n",
+            "Shape of tensor: torch.Size([3, 4])\n",
+            "Device tensor is on: cpu\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "9xXn8UTUDmIk"
+        "id": "_tsRIXIIHcbQ"
       },
       "execution_count": null,
       "outputs": []
